deploy/base/20-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: websites
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
